--- a/styles/style.scss
+++ b/styles/style.scss
@@ -64,7 +64,7 @@ section.modal_window {
   }
 }
 section.game {
-  background-image: url("img/bg.png");
+  background-image: url("../img/bg.png");
   background-size: contain;
   height: 500px;
   .fire_background {
@@ -118,7 +118,7 @@ section.game {
     cursor: pointer;
     width: 128px;
     height: 369px;
-    background: url("img/gunman.png");
+    background: url("../img/gunman.png");
     background-position: 0px 0px;
 
     z-index: 1;
@@ -130,7 +130,7 @@ section.game {
     cursor: pointer;
     width: 130px;
     height: 369px;
-    background: url("img/gunman.png");
+    background: url("../img/gunman.png");
     background-position: 0px 0px;
 
     z-index: 1;
@@ -142,7 +142,7 @@ section.game {
     cursor: pointer;
     width: 152px;
     height: 313px;
-    background: url("img/gunman.png");
+    background: url("../img/gunman.png");
     background-position: 0px 0px;
 
     z-index: 1;
@@ -220,7 +220,7 @@ section.game {
     cursor: pointer;
     width: 70px;
     height: 80px;
-    background: url("img/gunman.png");
+    background: url("../img/gunman.png");
     background-position: 0px 0px;
     z-index: 0;
     animation: rudolf_hat .9s ease 0s 2 alternate;
@@ -248,7 +248,7 @@ section.game {
     cursor: pointer;
     width: 145px;
     height: 80px;
-    background: url("img/gunman.png");
+    background: url("../img/gunman.png");
     background-position: 0px 0px;
     z-index: 0;
     animation: diego_hat .9s ease 0s 2 alternate;
@@ -276,7 +276,7 @@ section.game {
     cursor: pointer;
     width: 145px;
     height: 80px;
-    background: url("img/gunman.png");
+    background: url("../img/gunman.png");
     background-position: 0px 0px;
     z-index: 0;
     animation: freddies_hat .9s ease 0s 2 alternate;
